# elevator-simulator

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Modelfile  README.md  pyproject.toml  skills-lock.json
docs/: antigravity-brief.md  antigravity-master-prompt.md  decision-log.md  design.md  learning-log.md  research-brief.md  skyscraper-plan.md  training-plan.md
docs/research/: elevator-dispatch-algorithms.md  sources.md
scripts/: arena.py  assemble.py  bake_arena_presets.py  calibrate.py  harvest.py  label.py  oracle.py  rationalize.py  train.py
src/elevatorsim/: __init__.py  config.py
src/elevatorsim/arena/: __init__.py  registry.py  run.py
src/elevatorsim/core/: building.py  car.py  events.py  metrics.py  passenger.py  simulation.py  traffic.py
src/elevatorsim/mcp/: __init__.py  server.py
src/elevatorsim/policy/: __init__.py  agentic.py  base.py  baselines.py  destination.py  heuristic.py  schemas.py  skylobby.py  structural.py  structural_agent.py  zoning.py
src/elevatorsim/runners/: run_tier0.py  run_tier1.py
src/elevatorsim/tools/: sim_tools.py
src/elevatorsim/web/: arena_ws.py  (+3 more)
tests/: test_agents_local.py  test_agents_mock.py  test_agents_smoke.py  test_arena.py  test_assemble.py  test_core.py  test_destination.py  test_harvest.py  test_label.py  test_mcp_server.py  test_skylobby.py  test_structural.py  test_structural_agent.py  test_timing.py  test_traffic.py  test_web_server.py  test_zoning.py
transcripts/: raw_Build_Deploy_Agents_with_Strands_S1E1.txt
work-orders/: WO-001-harvest.md  WO-002-label-driver.md  WO-003-assembly.md
(+37 files in other folders)
